--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -355,6 +355,25 @@ body {
 		background: #008332;
 	}
 }
+.button-green2 {
+	width: 2rem;
+	height: 0.44rem;
+	border-radius: 0.04rem;
+	line-height: 0.42rem;
+	text-align: center;
+	display: inline-block;
+	font-size: 0.16rem;
+	color: #fff;
+	cursor: pointer;
+	box-sizing: border-box;
+	border: 1px solid #11e763;
+	transition: all 0.3s linear;
+	background: #008332;
+	font-weight: 200;
+	&:hover {
+		background: #00280f;
+	}
+}
 .button-green1 {
 	width: 2rem;
 	height: 0.44rem;
@@ -426,7 +445,7 @@ body {
 	font-weight: 200;
 }
 .button-disabled {
-	background: #323232;
+	background: #323232 !important;
 	width: 2rem;
 	height: 0.44rem;
 	border-radius: 0.04rem;
@@ -434,9 +453,9 @@ body {
 	text-align: center;
 	display: inline-block;
 	font-size: 0.18rem;
-	color: #a4a4a4;
-	cursor: pointer;
-	border: 1px solid #9b9b9b;
+	color: #828282 !important;
+	cursor: default !important;
+	border: 1px solid #9b9b9b !important;
 	box-sizing: border-box;
 	font-weight: 200;
 }
