--- a/app/src/components/menu/index.less
+++ b/app/src/components/menu/index.less
@@ -20,10 +20,13 @@
 		display: block;
 		width: 0.8rem;
 		height: 0.8rem;
-		margin: 0.36rem auto 0 auto;
-		margin-bottom: 0.58rem;
+		margin: 0.26rem auto 0.29rem auto;
 		border-radius: 100%;
 		overflow: hidden;
+	}
+	.line {
+		margin: 0 0.2rem;
+		border-bottom: 2px solid #1b1b23;
 	}
 	.user-position {
 		margin: 0 auto;
@@ -32,15 +35,16 @@
 	}
 	.menuList {
 		width: 100%;
+		margin-top: 0.28rem;
 		li {
 			position: relative;
 			height: 0.7rem;
 			text-align: left;
-			color: #777f8b;
+			color: #4a4a4a;
 			font-size: 0.16rem;
 			line-height: 0.7rem;
 			a {
-				color: #777f8b;
+				color: #4a4a4a;
 			}
 			cursor: pointer;
 			&:hover,
