--- a/app/src/entries/createwallet/components/root/index.less
+++ b/app/src/entries/createwallet/components/root/index.less
@@ -153,20 +153,9 @@
 						margin: 0 0.1rem;
 						width: 0.7rem;
 						height: 0.3rem;
-						line-height: 0.3rem;
+						line-height: 0.28rem;
+						font-size: 0.14rem;
 						cursor: pointer;
-						// background: linear-gradient(
-						// 	to bottom,
-						// 	#dadada 0%,
-						// 	#bdbdbd 100%
-						// );
-						// &.c {
-						// 	background: linear-gradient(
-						// 		to bottom,
-						// 		#82e0ac,
-						// 		#47c47f
-						// 	);
-						// }
 					}
 				}
 			}
