--- a/app/src/entries/importkeystore/components/root/index.less
+++ b/app/src/entries/importkeystore/components/root/index.less
@@ -49,6 +49,10 @@
 			box-sizing: border-box;
 			padding: 0.1rem;
 			color: #fff;
+			border: 1px solid #121212;
+			&.has {
+				border: 1px solid #47c47f;
+			}
 			&::-webkit-input-placeholder {
 				color: #4a4a4a;
 			}
@@ -76,7 +80,7 @@
 			background: url("../../../../assets/images/file_icon.png") left top
 				no-repeat;
 			background-size: 100% 100% !important;
-			background-color: #2e2e4c;
+			background-color: #0b0b0b;
 			position: absolute;
 			left: 0;
 			top: 0;
