--- a/app/src/entries/keystore/components/root/index.less
+++ b/app/src/entries/keystore/components/root/index.less
@@ -41,6 +41,7 @@
 				color: #fff;
 				word-break: break-all;
 				word-wrap: break-word;
+				font-weight: 200;
 			}
 			.btnBox {
 				margin-top: 0.3rem;
@@ -55,10 +56,10 @@
 					&:hover {
 						p {
 							color: #fff;
-							transform: translate3d(-50%, -0.1rem, 0);
+							transform: translate3d(-50%, -0.04rem, 0);
 						}
 						.icon {
-							transform: translateY(-0.1rem);
+							transform: translateY(-0.04rem);
 							&.file {
 								background-image: url("../../../../assets/images/file_ico_s.png");
 							}
