--- a/app/src/entries/mnemonic/components/root/index.less
+++ b/app/src/entries/mnemonic/components/root/index.less
@@ -19,7 +19,7 @@
 			box-sizing: border-box;
 			border: 3px solid #1e1e1e;
 			.titleImg {
-				width: 0.3rem;
+				width: 0.4rem;
 				height: 0.4rem;
 				margin: 0 auto;
 				margin-top: 0.26rem;
@@ -47,6 +47,7 @@
 						padding: 0 0.1rem;
 						margin: 0.11rem 0.1rem;
 						color: #fff;
+						font-weight: 400;
 					}
 				}
 			}
