--- a/app/src/entries/project/components/root/index.less
+++ b/app/src/entries/project/components/root/index.less
@@ -57,7 +57,7 @@
 			width: 5.22rem;
 			.tagsname {
 				text-align: left;
-				color: #55557d;
+				color: #4a4a4a;
 				font-size: 0.14rem;
 				line-height: 0.17rem;
 			}
@@ -77,7 +77,7 @@
 					border-radius: 0.04rem;
 					background: #0d0d0d;
 					box-sizing: border-box;
-					border: 1px solid #9b9b9b;
+					border: 1px solid #212121;
 					cursor: pointer;
 					transition: all 0.3s linear;
 					&:hover {
@@ -92,6 +92,8 @@
 			position: relative;
 			overflow: auto;
 			transition: top 1s ease-in-out;
+			margin-top: 0.27rem;
+			transition: all 1s linear;
 			.search-list-ul {
 				.search-cell {
 					width: 5.22rem;
