--- a/app/src/entries/gas/components/root/index.less
+++ b/app/src/entries/gas/components/root/index.less
@@ -92,6 +92,7 @@
 					height: 0.34rem;
 					line-height: 0.32rem;
 					border-radius: 4px;
+					font-size: 0.14rem;
 					outline: none;
 					font-size: 0.14rem;
 					font-weight: 200;
