--- a/app/src/entries/managewallet/components/root/index.less
+++ b/app/src/entries/managewallet/components/root/index.less
@@ -113,6 +113,7 @@
 							margin: 0 0.18rem;
 							color: #fff;
 							line-height: 0.28rem;
+							font-size: 0.14rem;
 						}
 						// .cancel {
 						// 	background: #dedede;
