--- a/app/src/components/menu/index.less
+++ b/app/src/components/menu/index.less
@@ -160,6 +160,18 @@
 			}
 		}
 	}
+	.moneybox {
+		text-align: center;
+		.total-money {
+			color: #11e763;
+			font-size: 0.2rem;
+		}
+		.text {
+			color: #828282;
+			font-size: 0.12rem;
+			padding: 0 0 0.2rem 0;
+		}
+	}
 }
 .prov-menu {
 	cursor: pointer;
