--- a/app/src/entries/keystore/components/root/index.less
+++ b/app/src/entries/keystore/components/root/index.less
@@ -12,7 +12,7 @@
 			margin: 0 auto;
 			margin-top: 0.56rem;
 			width: 7.76rem;
-			height: 5.32rem;
+			height: 5.52rem;
 			background: #121212;
 			border-radius: 8px;
 			overflow: hidden;
@@ -42,6 +42,12 @@
 				word-break: break-all;
 				word-wrap: break-word;
 				font-weight: 200;
+			}
+			.tip {
+				color: #797979;
+				text-align: center;
+				font-size: 0.12rem;
+				padding-top: 0.1rem;
 			}
 			.btnBox {
 				margin-top: 0.3rem;
