--- a/app/src/components/menu/index.less
+++ b/app/src/components/menu/index.less
@@ -160,6 +160,30 @@
 			}
 		}
 	}
+	.hasUpdater {
+		color: #fff;
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		text-align: center;
+		padding-bottom: 0.1rem;
+		font-size: 0.12rem;
+		.icon-oval {
+			font-size: 0.06rem;
+			vertical-align: middle;
+			margin-right: 0.05rem;
+			color: rgb(208, 2, 27);
+		}
+		.updatebtn {
+			color: #44cb82;
+			cursor: pointer;
+		}
+		.icon-golink {
+			font-size: 0.1rem;
+			vertical-align: middle;
+		}
+	}
 }
 .prov-menu {
 	cursor: pointer;
