--- a/app/src/entries/login/components/root/index.less
+++ b/app/src/entries/login/components/root/index.less
@@ -93,6 +93,22 @@
 				}
 			}
 		}
+		.agreement-item {
+			color: #fff;
+			display: flex;
+			justify-content: center;
+			.checkbox {
+				vertical-align: middle;
+				margin-right: 0.1rem;
+			}
+			span {
+				vertical-align: middle;
+				cursor: pointer;
+			}
+			.agreement {
+				width: 4.3rem;
+			}
+		}
 		.login-btn {
 			text-align: center;
 			padding: 0.3rem 0;
