--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -112,6 +112,17 @@
 			font-size: 0.12rem;
 			font-weight: 200;
 		}
+		.goback {
+			color: #fff;
+			vertical-align: middle;
+			padding: 0.03rem 0.1rem;
+			border-radius: 0.04rem;
+			// border: 1px solid #5c89eb;
+			margin-left: 0.1rem;
+			font-size: 0.12rem;
+			font-weight: 200;
+			cursor: pointer;
+		}
 		.unback {
 			color: #5c89eb;
 			vertical-align: middle;
