--- a/app/src/components/menu/index.less
+++ b/app/src/components/menu/index.less
@@ -184,6 +184,20 @@
 			vertical-align: middle;
 		}
 	}
+	.feedbtn {
+		width: 0.56rem;
+		height: 0.2rem;
+		color: #fff;
+		background: #4a4a4a;
+		text-align: center;
+		display: inline-block;
+		margin-left: 0.05rem;
+		border-radius: 0.04rem;
+		cursor: pointer;
+		&:hover {
+			background: #1e1e1e;
+		}
+	}
 }
 .prov-menu {
 	cursor: pointer;
